v4.2.0/_sources/plugins/path_trace_info_module.rst.txt
.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-entry
.. role:: ansible-option-default
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.dnac.path_trace_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.path_trace_info -- Information module for Path Trace
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 4.2.0).

    You might already have this collection installed if you are using the ``ansible`` package.
    It is not included in ``ansible-core``.
    To check whether it is installed, run :code:`ansible-galaxy collection list`.

    To install it, use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.path_trace_info`.

.. version_added

.. versionadded:: 3.1.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Path Trace.
- Get Path Trace by id.
- Returns a summary of all flow analyses stored. Results can be filtered by specified parameters.
- Returns result of a previously requested flow analysis by its Flow Analysis id.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk >= 2.4.4
- python >= 3.5


.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-destIP"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-destIP:

      .. rst-class:: ansible-option-title

      **destIP**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-destIP" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      DestIP query parameter. Destination IP adress.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-destPort"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-destPort:

      .. rst-class:: ansible-option-title

      **destPort**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-destPort" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      DestPort query parameter. Destination port.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_debug"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-dnac_debug:

      .. rst-class:: ansible-option-title

      **dnac_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco DNA Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-default-bold:`no` :ansible-option-default:`← (default)`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_host"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-dnac_host:

      .. rst-class:: ansible-option-title

      **dnac_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_password"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-dnac_password:

      .. rst-class:: ansible-option-title

      **dnac_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_port"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-dnac_port:

      .. rst-class:: ansible-option-title

      **dnac_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-dnac_username:
      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-user:

      .. rst-class:: ansible-option-title

      **dnac_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_verify"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-dnac_verify:

      .. rst-class:: ansible-option-title

      **dnac_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_version"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-dnac_version:

      .. rst-class:: ansible-option-title

      **dnac_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco DNA Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.2.3.3"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-flowAnalysisId"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-flowAnalysisId:

      .. rst-class:: ansible-option-title

      **flowAnalysisId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-flowAnalysisId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      FlowAnalysisId path parameter. Flow analysis request id.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-gtCreateTime"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-gtCreateTime:

      .. rst-class:: ansible-option-title

      **gtCreateTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-gtCreateTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      GtCreateTime query parameter. Analyses requested after this time.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-headers"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-headers:

      .. rst-class:: ansible-option-title

      **headers**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-headers" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Additional headers.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-lastUpdateTime"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-lastUpdateTime:

      .. rst-class:: ansible-option-title

      **lastUpdateTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-lastUpdateTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      LastUpdateTime query parameter. Last update time.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-limit"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-limit:

      .. rst-class:: ansible-option-title

      **limit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-limit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Limit query parameter. Number of resources returned.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-ltCreateTime"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-ltCreateTime:

      .. rst-class:: ansible-option-title

      **ltCreateTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-ltCreateTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      LtCreateTime query parameter. Analyses requested before this time.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-offset"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-offset:

      .. rst-class:: ansible-option-title

      **offset**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-offset" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Offset query parameter. Start index of resources returned (1-based).


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-order"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-order:

      .. rst-class:: ansible-option-title

      **order**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-order" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Order query parameter. Order by this field.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-periodicRefresh"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-periodicRefresh:

      .. rst-class:: ansible-option-title

      **periodicRefresh**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-periodicRefresh" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      PeriodicRefresh query parameter. Is analysis periodically refreshed?.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-protocol"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-protocol:

      .. rst-class:: ansible-option-title

      **protocol**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-protocol" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Protocol query parameter.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sortBy"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-sortBy:

      .. rst-class:: ansible-option-title

      **sortBy**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sortBy" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SortBy query parameter. Sort by this field.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sourceIP"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-sourceIP:

      .. rst-class:: ansible-option-title

      **sourceIP**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sourceIP" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SourceIP query parameter. Source IP address.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sourcePort"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-sourcePort:

      .. rst-class:: ansible-option-title

      **sourcePort**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sourcePort" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SourcePort query parameter. Source port.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-status"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-status:

      .. rst-class:: ansible-option-title

      **status**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-status" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Status query parameter.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-taskId"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-taskId:

      .. rst-class:: ansible-option-title

      **taskId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-taskId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      TaskId query parameter. Task ID.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco DNA Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are path_trace.PathTrace.retrives_all_previous_pathtraces_summary, path_trace.PathTrace.retrieves_previous_pathtrace
   - Paths used are get /dna/intent/api/v1/flow-analysis, get /dna/intent/api/v1/flow-analysis/{flowAnalysisId}
   - Supports \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco DNAC SDK
   - The parameters starting with dnac_ are used by the Cisco DNAC Python SDK to establish the connection

.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Path Trace
      cisco.dnac.path_trace_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        headers:
          custom: value
        periodicRefresh: True
        sourceIP: string
        destIP: string
        sourcePort: string
        destPort: string
        gtCreateTime: string
        ltCreateTime: string
        protocol: string
        status: string
        taskId: string
        lastUpdateTime: string
        limit: string
        offset: string
        order: string
        sortBy: string
      register: result

    - name: Get Path Trace by id
      cisco.dnac.path_trace_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        headers:
          custom: value
        flowAnalysisId: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-dnac_response"></div>

      .. _ansible_collections.cisco.dnac.path_trace_info_module__return-dnac_response:

      .. rst-class:: ansible-option-title

      **dnac_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco DNAC Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` "{\\n  \\"response\\": {\\n    \\"detailedStatus\\": {\\n      \\"aclTraceCalculation\\": \\"string\\",\\n      \\"aclTraceCalculationFailureReason\\": \\"string\\"\\n    },\\n    \\"lastUpdate\\": \\"string\\",\\n    \\"networkElements\\": [\\n      {\\n        \\"accuracyList\\": [\\n          {\\n            \\"percent\\": 0,\\n            \\"reason\\": \\"string\\"\\n          }\\n        ],\\n        \\"detailedStatus\\": {\\n          \\"aclTraceCalculation\\": \\"string\\",\\n          \\"aclTraceCalculationFailureReason\\": \\"string\\"\\n        },\\n        \\"deviceStatistics\\": {\\n          \\"cpuStatistics\\": {\\n            \\"fiveMinUsageInPercentage\\": 0,\\n            \\"fiveSecsUsageInPercentage\\": 0,\\n            \\"oneMinUsageInPercentage\\": 0,\\n            \\"refreshedAt\\": 0\\n          },\\n          \\"memoryStatistics\\": {\\n            \\"memoryUsage\\": 0,\\n            \\"refreshedAt\\": 0,\\n            \\"totalMemory\\": 0\\n          }\\n        },\\n        \\"deviceStatsCollection\\": \\"string\\",\\n        \\"deviceStatsCollectionFailureReason\\": \\"string\\",\\n        \\"egressPhysicalInterface\\": {\\n          \\"aclAnalysis\\": {\\n            \\"aclName\\": \\"string\\",\\n            \\"matchingAces\\": [\\n              {\\n                \\"ace\\": \\"string\\",\\n                \\"matchingPorts\\": [\\n                  {\\n                    \\"ports\\": [\\n                      {\\n                        \\"destPorts\\": [\\n                          \\"string\\"\\n                        ],\\n                        \\"sourcePorts\\": [\\n                          \\"string\\"\\n                        ]\\n                      }\\n                    ],\\n                    \\"protocol\\": \\"string\\"\\n                  }\\n                ],\\n                \\"result\\": \\"string\\"\\n              }\\n            ],\\n            \\"result\\": \\"string\\"\\n          },\\n          \\"id\\": \\"string\\",\\n          \\"interfaceStatistics\\": {\\n            \\"adminStatus\\": \\"string\\",\\n            \\"inputPackets\\": 0,\\n            \\"inputQueueCount\\": 0,\\n            \\"inputQueueDrops\\": 0,\\n            \\"inputQueueFlushes\\": 0,\\n            \\"inputQueueMaxDepth\\": 0,\\n            \\"inputRatebps\\": 0,\\n            \\"operationalStatus\\": \\"string\\",\\n            \\"outputDrop\\": 0,\\n            \\"outputPackets\\": 0,\\n            \\"outputQueueCount\\": 0,\\n            \\"outputQueueDepth\\": 0,\\n            \\"outputRatebps\\": 0,\\n            \\"refreshedAt\\": 0\\n          },\\n          \\"interfaceStatsCollection\\": \\"string\\",\\n          \\"interfaceStatsCollectionFailureReason\\": \\"string\\",\\n          \\"name\\": \\"string\\",\\n          \\"pathOverlayInfo\\": [\\n            {\\n              \\"controlPlane\\": \\"string\\",\\n              \\"dataPacketEncapsulation\\": \\"string\\",\\n              \\"destIp\\": \\"string\\",\\n              \\"destPort\\": \\"string\\",\\n              \\"protocol\\": \\"string\\",\\n              \\"sourceIp\\": \\"string\\",\\n              \\"sourcePort\\": \\"string\\",\\n              \\"vxlanInfo\\": {\\n                \\"dscp\\": \\"string\\",\\n                \\"vnid\\": \\"string\\"\\n              }\\n            }\\n          ],\\n          \\"qosStatistics\\": [\\n            {\\n              \\"classMapName\\": \\"string\\",\\n              \\"dropRate\\": 0,\\n              \\"numBytes\\": 0,\\n              \\"numPackets\\": 0,\\n              \\"offeredRate\\": 0,\\n              \\"queueBandwidthbps\\": \\"string\\",\\n              \\"queueDepth\\": 0,\\n              \\"queueNoBufferDrops\\": 0,\\n              \\"queueTotalDrops\\": 0,\\n              \\"refreshedAt\\": 0\\n            }\\n          ],\\n          \\"qosStatsCollection\\": \\"string\\",\\n          \\"qosStatsCollectionFailureReason\\": \\"string\\",\\n          \\"usedVlan\\": \\"string\\",\\n          \\"vrfName\\": \\"string\\"\\n        },\\n        \\"egressVirtualInterface\\": {\\n          \\"aclAnalysis\\": {\\n            \\"aclName\\": \\"string\\",\\n            \\"matchingAces\\": [\\n              {\\n                \\"ace\\": \\"string\\",\\n                \\"matchingPorts\\": [\\n                  {\\n                    \\"ports\\": [\\n                      {\\n                        \\"destPorts\\": [\\n                          \\"string\\"\\n                        ],\\n                        \\"sourcePorts\\": [\\n                          \\"string\\"\\n                        ]\\n                      }\\n                    ],\\n                    \\"protocol\\": \\"string\\"\\n                  }\\n                ],\\n                \\"result\\": \\"string\\"\\n              }\\n            ],\\n            \\"result\\": \\"string\\"\\n          },\\n          \\"id\\": \\"string\\",\\n          \\"interfaceStatistics\\": {\\n            \\"adminStatus\\": \\"string\\",\\n            \\"inputPackets\\": 0,\\n            \\"inputQueueCount\\": 0,\\n            \\"inputQueueDrops\\": 0,\\n            \\"inputQueueFlushes\\": 0,\\n            \\"inputQueueMaxDepth\\": 0,\\n            \\"inputRatebps\\": 0,\\n            \\"operationalStatus\\": \\"string\\",\\n            \\"outputDrop\\": 0,\\n            \\"outputPackets\\": 0,\\n            \\"outputQueueCount\\": 0,\\n            \\"outputQueueDepth\\": 0,\\n            \\"outputRatebps\\": 0,\\n            \\"refreshedAt\\": 0\\n          },\\n          \\"interfaceStatsCollection\\": \\"string\\",\\n          \\"interfaceStatsCollectionFailureReason\\": \\"string\\",\\n          \\"name\\": \\"string\\",\\n          \\"pathOverlayInfo\\": [\\n            {\\n              \\"controlPlane\\": \\"string\\",\\n              \\"dataPacketEncapsulation\\": \\"string\\",\\n              \\"destIp\\": \\"string\\",\\n              \\"destPort\\": \\"string\\",\\n              \\"protocol\\": \\"string\\",\\n              \\"sourceIp\\": \\"string\\",\\n              \\"sourcePort\\": \\"string\\",\\n              \\"vxlanInfo\\": {\\n                \\"dscp\\": \\"string\\",\\n                \\"vnid\\": \\"string\\"\\n              }\\n            }\\n          ],\\n          \\"qosStatistics\\": [\\n            {\\n              \\"classMapName\\": \\"string\\",\\n              \\"dropRate\\": 0,\\n              \\"numBytes\\": 0,\\n              \\"numPackets\\": 0,\\n              \\"offeredRate\\": 0,\\n              \\"queueBandwidthbps\\": \\"string\\",\\n              \\"queueDepth\\": 0,\\n              \\"queueNoBufferDrops\\": 0,\\n              \\"queueTotalDrops\\": 0,\\n              \\"refreshedAt\\": 0\\n            }\\n          ],\\n          \\"qosStatsCollection\\": \\"string\\",\\n          \\"qosStatsCollectionFailureReason\\": \\"string\\",\\n          \\"usedVlan\\": \\"string\\",\\n          \\"vrfName\\": \\"string\\"\\n        },\\n        \\"flexConnect\\": {\\n          \\"authentication\\": \\"string\\",\\n          \\"dataSwitching\\": \\"string\\",\\n          \\"egressAclAnalysis\\": {\\n            \\"aclName\\": \\"string\\",\\n            \\"matchingAces\\": [\\n              {\\n                \\"ace\\": \\"string\\",\\n                \\"matchingPorts\\": [\\n                  {\\n                    \\"ports\\": [\\n                      {\\n                        \\"destPorts\\": [\\n                          \\"string\\"\\n                        ],\\n                        \\"sourcePorts\\": [\\n                          \\"string\\"\\n                        ]\\n                      }\\n                    ],\\n                    \\"protocol\\": \\"string\\"\\n                  }\\n                ],\\n                \\"result\\": \\"string\\"\\n              }\\n            ],\\n            \\"result\\": \\"string\\"\\n          },\\n          \\"ingressAclAnalysis\\": {\\n            \\"aclName\\": \\"string\\",\\n            \\"matchingAces\\": [\\n              {\\n                \\"ace\\": \\"string\\",\\n                \\"matchingPorts\\": [\\n                  {\\n                    \\"ports\\": [\\n                      {\\n                        \\"destPorts\\": [\\n                          \\"string\\"\\n                        ],\\n                        \\"sourcePorts\\": [\\n                          \\"string\\"\\n                        ]\\n                      }\\n                    ],\\n                    \\"protocol\\": \\"string\\"\\n                  }\\n                ],\\n                \\"result\\": \\"string\\"\\n              }\\n            ],\\n            \\"result\\": \\"string\\"\\n          },\\n          \\"wirelessLanControllerId\\": \\"string\\",\\n          \\"wirelessLanControllerName\\": \\"string\\"\\n        },\\n        \\"id\\": \\"string\\",\\n        \\"ingressPhysicalInterface\\": {\\n          \\"aclAnalysis\\": {\\n            \\"aclName\\": \\"string\\",\\n            \\"matchingAces\\": [\\n              {\\n                \\"ace\\": \\"string\\",\\n                \\"matchingPorts\\": [\\n                  {\\n                    \\"ports\\": [\\n                      {\\n                        \\"destPorts\\": [\\n                          \\"string\\"\\n                        ],\\n                        \\"sourcePorts\\": [\\n                          \\"string\\"\\n                        ]\\n                      }\\n                    ],\\n                    \\"protocol\\": \\"string\\"\\n                  }\\n                ],\\n                \\"result\\": \\"string\\"\\n              }\\n            ],\\n            \\"result\\": \\"string\\"\\n          },\\n          \\"id\\": \\"string\\",\\n          \\"interfaceStatistics\\": {\\n            \\"adminStatus\\": \\"string\\",\\n            \\"inputPackets\\": 0,\\n            \\"inputQueueCount\\": 0,\\n            \\"inputQueueDrops\\": 0,\\n            \\"inputQueueFlushes\\": 0,\\n            \\"inputQueueMaxDepth\\": 0,\\n            \\"inputRatebps\\": 0,\\n            \\"operationalStatus\\": \\"string\\",\\n            \\"outputDrop\\": 0,\\n            \\"outputPackets\\": 0,\\n            \\"outputQueueCount\\": 0,\\n            \\"outputQueueDepth\\": 0,\\n            \\"outputRatebps\\": 0,\\n            \\"refreshedAt\\": 0\\n          },\\n          \\"interfaceStatsCollection\\": \\"string\\",\\n          \\"interfaceStatsCollectionFailureReason\\": \\"string\\",\\n          \\"name\\": \\"string\\",\\n          \\"pathOverlayInfo\\": [\\n            {\\n              \\"controlPlane\\": \\"string\\",\\n              \\"dataPacketEncapsulation\\": \\"string\\",\\n              \\"destIp\\": \\"string\\",\\n              \\"destPort\\": \\"string\\",\\n              \\"protocol\\": \\"string\\",\\n              \\"sourceIp\\": \\"string\\",\\n              \\"sourcePort\\": \\"string\\",\\n              \\"vxlanInfo\\": {\\n                \\"dscp\\": \\"string\\",\\n                \\"vnid\\": \\"string\\"\\n              }\\n            }\\n          ],\\n          \\"qosStatistics\\": [\\n            {\\n              \\"classMapName\\": \\"string\\",\\n              \\"dropRate\\": 0,\\n              \\"numBytes\\": 0,\\n              \\"numPackets\\": 0,\\n              \\"offeredRate\\": 0,\\n              \\"queueBandwidthbps\\": \\"string\\",\\n              \\"queueDepth\\": 0,\\n              \\"queueNoBufferDrops\\": 0,\\n              \\"queueTotalDrops\\": 0,\\n              \\"refreshedAt\\": 0\\n            }\\n          ],\\n          \\"qosStatsCollection\\": \\"string\\",\\n          \\"qosStatsCollectionFailureReason\\": \\"string\\",\\n          \\"usedVlan\\": \\"string\\",\\n          \\"vrfName\\": \\"string\\"\\n        },\\n        \\"ingressVirtualInterface\\": {\\n          \\"aclAnalysis\\": {\\n            \\"aclName\\": \\"string\\",\\n            \\"matchingAces\\": [\\n              {\\n                \\"ace\\": \\"string\\",\\n                \\"matchingPorts\\": [\\n                  {\\n                    \\"ports\\": [\\n                      {\\n                        \\"destPorts\\": [\\n                          \\"string\\"\\n                        ],\\n                        \\"sourcePorts\\": [\\n                          \\"string\\"\\n                        ]\\n                      }\\n                    ],\\n                    \\"protocol\\": \\"string\\"\\n                  }\\n                ],\\n                \\"result\\": \\"string\\"\\n              }\\n            ],\\n            \\"result\\": \\"string\\"\\n          },\\n          \\"id\\": \\"string\\",\\n          \\"interfaceStatistics\\": {\\n            \\"adminStatus\\": \\"string\\",\\n            \\"inputPackets\\": 0,\\n            \\"inputQueueCount\\": 0,\\n            \\"inputQueueDrops\\": 0,\\n            \\"inputQueueFlushes\\": 0,\\n            \\"inputQueueMaxDepth\\": 0,\\n            \\"inputRatebps\\": 0,\\n            \\"operationalStatus\\": \\"string\\",\\n            \\"outputDrop\\": 0,\\n            \\"outputPackets\\": 0,\\n            \\"outputQueueCount\\": 0,\\n            \\"outputQueueDepth\\": 0,\\n            \\"outputRatebps\\": 0,\\n            \\"refreshedAt\\": 0\\n          },\\n          \\"interfaceStatsCollection\\": \\"string\\",\\n          \\"interfaceStatsCollectionFailureReason\\": \\"string\\",\\n          \\"name\\": \\"string\\",\\n          \\"pathOverlayInfo\\": [\\n            {\\n              \\"controlPlane\\": \\"string\\",\\n              \\"dataPacketEncapsulation\\": \\"string\\",\\n              \\"destIp\\": \\"string\\",\\n              \\"destPort\\": \\"string\\",\\n              \\"protocol\\": \\"string\\",\\n              \\"sourceIp\\": \\"string\\",\\n              \\"sourcePort\\": \\"string\\",\\n              \\"vxlanInfo\\": {\\n                \\"dscp\\": \\"string\\",\\n                \\"vnid\\": \\"string\\"\\n              }\\n            }\\n          ],\\n          \\"qosStatistics\\": [\\n            {\\n              \\"classMapName\\": \\"string\\",\\n              \\"dropRate\\": 0,\\n              \\"numBytes\\": 0,\\n              \\"numPackets\\": 0,\\n              \\"offeredRate\\": 0,\\n              \\"queueBandwidthbps\\": \\"string\\",\\n              \\"queueDepth\\": 0,\\n              \\"queueNoBufferDrops\\": 0,\\n              \\"queueTotalDrops\\": 0,\\n              \\"refreshedAt\\": 0\\n            }\\n          ],\\n          \\"qosStatsCollection\\": \\"string\\",\\n          \\"qosStatsCollectionFailureReason\\": \\"string\\",\\n          \\"usedVlan\\": \\"string\\",\\n          \\"vrfName\\": \\"string\\"\\n        },\\n        \\"ip\\": \\"string\\",\\n        \\"linkInformationSource\\": \\"string\\",\\n        \\"name\\": \\"string\\",\\n        \\"perfMonCollection\\": \\"string\\",\\n        \\"perfMonCollectionFailureReason\\": \\"string\\",\\n        \\"perfMonStatistics\\": [\\n          {\\n            \\"byteRate\\": 0,\\n            \\"destIpAddress\\": \\"string\\",\\n            \\"destPort\\": \\"string\\",\\n            \\"inputInterface\\": \\"string\\",\\n            \\"ipv4DSCP\\": \\"string\\",\\n            \\"ipv4TTL\\": 0,\\n            \\"outputInterface\\": \\"string\\",\\n            \\"packetBytes\\": 0,\\n            \\"packetCount\\": 0,\\n            \\"packetLoss\\": 0,\\n            \\"packetLossPercentage\\": 0,\\n            \\"protocol\\": \\"string\\",\\n            \\"refreshedAt\\": 0,\\n            \\"rtpJitterMax\\": 0,\\n            \\"rtpJitterMean\\": 0,\\n            \\"rtpJitterMin\\": 0,\\n            \\"sourceIpAddress\\": \\"string\\",\\n            \\"sourcePort\\": \\"string\\"\\n          }\\n        ],\\n        \\"role\\": \\"string\\",\\n        \\"ssid\\": \\"string\\",\\n        \\"tunnels\\": [\\n          \\"string\\"\\n        ],\\n        \\"type\\": \\"string\\",\\n        \\"wlanId\\": \\"string\\"\\n      }\\n    ],\\n    \\"networkElementsInfo\\": [\\n      {\\n        \\"accuracyList\\": [\\n          {\\n            \\"percent\\": 0,\\n            \\"reason\\": \\"string\\"\\n          }\\n        ],\\n        \\"detailedStatus\\": {\\n          \\"aclTraceCalculation\\": \\"string\\",\\n          \\"aclTraceCalculationFailureReason\\": \\"string\\"\\n        },\\n        \\"deviceStatistics\\": {\\n          \\"cpuStatistics\\": {\\n            \\"fiveMinUsageInPercentage\\": 0,\\n            \\"fiveSecsUsageInPercentage\\": 0,\\n            \\"oneMinUsageInPercentage\\": 0,\\n            \\"refreshedAt\\": 0\\n          },\\n          \\"memoryStatistics\\": {\\n            \\"memoryUsage\\": 0,\\n            \\"refreshedAt\\": 0,\\n            \\"totalMemory\\": 0\\n          }\\n        },\\n        \\"deviceStatsCollection\\": \\"string\\",\\n        \\"deviceStatsCollectionFailureReason\\": \\"string\\",\\n        \\"egressInterface\\": {\\n          \\"physicalInterface\\": {\\n            \\"aclAnalysis\\": {\\n              \\"aclName\\": \\"string\\",\\n              \\"matchingAces\\": [\\n                {\\n                  \\"ace\\": \\"string\\",\\n                  \\"matchingPorts\\": [\\n                    {\\n                      \\"ports\\": [\\n                        {\\n                          \\"destPorts\\": [\\n                            \\"string\\"\\n                          ],\\n                          \\"sourcePorts\\": [\\n                            \\"string\\"\\n                          ]\\n                        }\\n                      ],\\n                      \\"protocol\\": \\"string\\"\\n                    }\\n                  ],\\n                  \\"result\\": \\"string\\"\\n                }\\n              ],\\n              \\"result\\": \\"string\\"\\n            },\\n            \\"id\\": \\"string\\",\\n            \\"interfaceStatistics\\": {\\n              \\"adminStatus\\": \\"string\\",\\n              \\"inputPackets\\": 0,\\n              \\"inputQueueCount\\": 0,\\n              \\"inputQueueDrops\\": 0,\\n              \\"inputQueueFlushes\\": 0,\\n              \\"inputQueueMaxDepth\\": 0,\\n              \\"inputRatebps\\": 0,\\n              \\"operationalStatus\\": \\"string\\",\\n              \\"outputDrop\\": 0,\\n              \\"outputPackets\\": 0,\\n              \\"outputQueueCount\\": 0,\\n              \\"outputQueueDepth\\": 0,\\n              \\"outputRatebps\\": 0,\\n              \\"refreshedAt\\": 0\\n            },\\n            \\"interfaceStatsCollection\\": \\"string\\",\\n            \\"interfaceStatsCollectionFailureReason\\": \\"string\\",\\n            \\"name\\": \\"string\\",\\n            \\"pathOverlayInfo\\": [\\n              {\\n                \\"controlPlane\\": \\"string\\",\\n                \\"dataPacketEncapsulation\\": \\"string\\",\\n                \\"destIp\\": \\"string\\",\\n                \\"destPort\\": \\"string\\",\\n                \\"protocol\\": \\"string\\",\\n                \\"sourceIp\\": \\"string\\",\\n                \\"sourcePort\\": \\"string\\",\\n                \\"vxlanInfo\\": {\\n                  \\"dscp\\": \\"string\\",\\n                  \\"vnid\\": \\"string\\"\\n                }\\n              }\\n            ],\\n            \\"qosStatistics\\": [\\n              {\\n                \\"classMapName\\": \\"string\\",\\n                \\"dropRate\\": 0,\\n                \\"numBytes\\": 0,\\n                \\"numPackets\\": 0,\\n                \\"offeredRate\\": 0,\\n                \\"queueBandwidthbps\\": \\"string\\",\\n                \\"queueDepth\\": 0,\\n                \\"queueNoBufferDrops\\": 0,\\n                \\"queueTotalDrops\\": 0,\\n                \\"refreshedAt\\": 0\\n              }\\n            ],\\n            \\"qosStatsCollection\\": \\"string\\",\\n            \\"qosStatsCollectionFailureReason\\": \\"string\\",\\n            \\"usedVlan\\": \\"string\\",\\n            \\"vrfName\\": \\"string\\"\\n          },\\n          \\"virtualInterface\\": [\\n            {\\n              \\"aclAnalysis\\": {\\n                \\"aclName\\": \\"string\\",\\n                \\"matchingAces\\": [\\n                  {\\n                    \\"ace\\": \\"string\\",\\n                    \\"matchingPorts\\": [\\n                      {\\n                        \\"ports\\": [\\n                          {\\n                            \\"destPorts\\": [\\n                              \\"string\\"\\n                            ],\\n                            \\"sourcePorts\\": [\\n                              \\"string\\"\\n                            ]\\n                          }\\n                        ],\\n                        \\"protocol\\": \\"string\\"\\n                      }\\n                    ],\\n                    \\"result\\": \\"string\\"\\n                  }\\n                ],\\n                \\"result\\": \\"string\\"\\n              },\\n              \\"id\\": \\"string\\",\\n              \\"interfaceStatistics\\": {\\n                \\"adminStatus\\": \\"string\\",\\n                \\"inputPackets\\": 0,\\n                \\"inputQueueCount\\": 0,\\n                \\"inputQueueDrops\\": 0,\\n                \\"inputQueueFlushes\\": 0,\\n                \\"inputQueueMaxDepth\\": 0,\\n                \\"inputRatebps\\": 0,\\n                \\"operationalStatus\\": \\"string\\",\\n                \\"outputDrop\\": 0,\\n                \\"outputPackets\\": 0,\\n                \\"outputQueueCount\\": 0,\\n                \\"outputQueueDepth\\": 0,\\n                \\"outputRatebps\\": 0,\\n                \\"refreshedAt\\": 0\\n              },\\n              \\"interfaceStatsCollection\\": \\"string\\",\\n              \\"interfaceStatsCollectionFailureReason\\": \\"string\\",\\n              \\"name\\": \\"string\\",\\n              \\"pathOverlayInfo\\": [\\n                {\\n                  \\"controlPlane\\": \\"string\\",\\n                  \\"dataPacketEncapsulation\\": \\"string\\",\\n                  \\"destIp\\": \\"string\\",\\n                  \\"destPort\\": \\"string\\",\\n                  \\"protocol\\": \\"string\\",\\n                  \\"sourceIp\\": \\"string\\",\\n                  \\"sourcePort\\": \\"string\\",\\n                  \\"vxlanInfo\\": {\\n                    \\"dscp\\": \\"string\\",\\n                    \\"vnid\\": \\"string\\"\\n                  }\\n                }\\n              ],\\n              \\"qosStatistics\\": [\\n                {\\n                  \\"classMapName\\": \\"string\\",\\n                  \\"dropRate\\": 0,\\n                  \\"numBytes\\": 0,\\n                  \\"numPackets\\": 0,\\n                  \\"offeredRate\\": 0,\\n                  \\"queueBandwidthbps\\": \\"string\\",\\n                  \\"queueDepth\\": 0,\\n                  \\"queueNoBufferDrops\\": 0,\\n                  \\"queueTotalDrops\\": 0,\\n                  \\"refreshedAt\\": 0\\n                }\\n              ],\\n              \\"qosStatsCollection\\": \\"string\\",\\n              \\"qosStatsCollectionFailureReason\\": \\"string\\",\\n              \\"usedVlan\\": \\"string\\",\\n              \\"vrfName\\": \\"string\\"\\n            }\\n          ]\\n        },\\n        \\"flexConnect\\": {\\n          \\"authentication\\": \\"string\\",\\n          \\"dataSwitching\\": \\"string\\",\\n          \\"egressAclAnalysis\\": {\\n            \\"aclName\\": \\"string\\",\\n            \\"matchingAces\\": [\\n              {\\n                \\"ace\\": \\"string\\",\\n                \\"matchingPorts\\": [\\n                  {\\n                    \\"ports\\": [\\n                      {\\n                        \\"destPorts\\": [\\n                          \\"string\\"\\n                        ],\\n                        \\"sourcePorts\\": [\\n                          \\"string\\"\\n                        ]\\n                      }\\n                    ],\\n                    \\"protocol\\": \\"string\\"\\n                  }\\n                ],\\n                \\"result\\": \\"string\\"\\n              }\\n            ],\\n            \\"result\\": \\"string\\"\\n          },\\n          \\"ingressAclAnalysis\\": {\\n            \\"aclName\\": \\"string\\",\\n            \\"matchingAces\\": [\\n              {\\n                \\"ace\\": \\"string\\",\\n                \\"matchingPorts\\": [\\n                  {\\n                    \\"ports\\": [\\n                      {\\n                        \\"destPorts\\": [\\n                          \\"string\\"\\n                        ],\\n                        \\"sourcePorts\\": [\\n                          \\"string\\"\\n                        ]\\n                      }\\n                    ],\\n                    \\"protocol\\": \\"string\\"\\n                  }\\n                ],\\n                \\"result\\": \\"string\\"\\n              }\\n            ],\\n            \\"result\\": \\"string\\"\\n          },\\n          \\"wirelessLanControllerId\\": \\"string\\",\\n          \\"wirelessLanControllerName\\": \\"string\\"\\n        },\\n        \\"id\\": \\"string\\",\\n        \\"ingressInterface\\": {\\n          \\"physicalInterface\\": {\\n            \\"aclAnalysis\\": {\\n              \\"aclName\\": \\"string\\",\\n              \\"matchingAces\\": [\\n                {\\n                  \\"ace\\": \\"string\\",\\n                  \\"matchingPorts\\": [\\n                    {\\n                      \\"ports\\": [\\n                        {\\n                          \\"destPorts\\": [\\n                            \\"string\\"\\n                          ],\\n                          \\"sourcePorts\\": [\\n                            \\"string\\"\\n                          ]\\n                        }\\n                      ],\\n                      \\"protocol\\": \\"string\\"\\n                    }\\n                  ],\\n                  \\"result\\": \\"string\\"\\n                }\\n              ],\\n              \\"result\\": \\"string\\"\\n            },\\n            \\"id\\": \\"string\\",\\n            \\"interfaceStatistics\\": {\\n              \\"adminStatus\\": \\"string\\",\\n              \\"inputPackets\\": 0,\\n              \\"inputQueueCount\\": 0,\\n              \\"inputQueueDrops\\": 0,\\n              \\"inputQueueFlushes\\": 0,\\n              \\"inputQueueMaxDepth\\": 0,\\n              \\"inputRatebps\\": 0,\\n              \\"operationalStatus\\": \\"string\\",\\n              \\"outputDrop\\": 0,\\n              \\"outputPackets\\": 0,\\n              \\"outputQueueCount\\": 0,\\n              \\"outputQueueDepth\\": 0,\\n              \\"outputRatebps\\": 0,\\n              \\"refreshedAt\\": 0\\n            },\\n            \\"interfaceStatsCollection\\": \\"string\\",\\n            \\"interfaceStatsCollectionFailureReason\\": \\"string\\",\\n            \\"name\\": \\"string\\",\\n            \\"pathOverlayInfo\\": [\\n              {\\n                \\"controlPlane\\": \\"string\\",\\n                \\"dataPacketEncapsulation\\": \\"string\\",\\n                \\"destIp\\": \\"string\\",\\n                \\"destPort\\": \\"string\\",\\n                \\"protocol\\": \\"string\\",\\n                \\"sourceIp\\": \\"string\\",\\n                \\"sourcePort\\": \\"string\\",\\n                \\"vxlanInfo\\": {\\n                  \\"dscp\\": \\"string\\",\\n                  \\"vnid\\": \\"string\\"\\n                }\\n              }\\n            ],\\n            \\"qosStatistics\\": [\\n              {\\n                \\"classMapName\\": \\"string\\",\\n                \\"dropRate\\": 0,\\n                \\"numBytes\\": 0,\\n                \\"numPackets\\": 0,\\n                \\"offeredRate\\": 0,\\n                \\"queueBandwidthbps\\": \\"string\\",\\n                \\"queueDepth\\": 0,\\n                \\"queueNoBufferDrops\\": 0,\\n                \\"queueTotalDrops\\": 0,\\n                \\"refreshedAt\\": 0\\n              }\\n            ],\\n            \\"qosStatsCollection\\": \\"string\\",\\n            \\"qosStatsCollectionFailureReason\\": \\"string\\",\\n            \\"usedVlan\\": \\"string\\",\\n            \\"vrfName\\": \\"string\\"\\n          },\\n          \\"virtualInterface\\": [\\n            {\\n              \\"aclAnalysis\\": {\\n                \\"aclName\\": \\"string\\",\\n                \\"matchingAces\\": [\\n                  {\\n                    \\"ace\\": \\"string\\",\\n                    \\"matchingPorts\\": [\\n                      {\\n                        \\"ports\\": [\\n                          {\\n                            \\"destPorts\\": [\\n                              \\"string\\"\\n                            ],\\n                            \\"sourcePorts\\": [\\n                              \\"string\\"\\n                            ]\\n                          }\\n                        ],\\n                        \\"protocol\\": \\"string\\"\\n                      }\\n                    ],\\n                    \\"result\\": \\"string\\"\\n                  }\\n                ],\\n                \\"result\\": \\"string\\"\\n              },\\n              \\"id\\": \\"string\\",\\n              \\"interfaceStatistics\\": {\\n                \\"adminStatus\\": \\"string\\",\\n                \\"inputPackets\\": 0,\\n                \\"inputQueueCount\\": 0,\\n                \\"inputQueueDrops\\": 0,\\n                \\"inputQueueFlushes\\": 0,\\n                \\"inputQueueMaxDepth\\": 0,\\n                \\"inputRatebps\\": 0,\\n                \\"operationalStatus\\": \\"string\\",\\n                \\"outputDrop\\": 0,\\n                \\"outputPackets\\": 0,\\n                \\"outputQueueCount\\": 0,\\n                \\"outputQueueDepth\\": 0,\\n                \\"outputRatebps\\": 0,\\n                \\"refreshedAt\\": 0\\n              },\\n              \\"interfaceStatsCollection\\": \\"string\\",\\n              \\"interfaceStatsCollectionFailureReason\\": \\"string\\",\\n              \\"name\\": \\"string\\",\\n              \\"pathOverlayInfo\\": [\\n                {\\n                  \\"controlPlane\\": \\"string\\",\\n                  \\"dataPacketEncapsulation\\": \\"string\\",\\n                  \\"destIp\\": \\"string\\",\\n                  \\"destPort\\": \\"string\\",\\n                  \\"protocol\\": \\"string\\",\\n                  \\"sourceIp\\": \\"string\\",\\n                  \\"sourcePort\\": \\"string\\",\\n                  \\"vxlanInfo\\": {\\n                    \\"dscp\\": \\"string\\",\\n                    \\"vnid\\": \\"string\\"\\n                  }\\n                }\\n              ],\\n              \\"qosStatistics\\": [\\n                {\\n                  \\"classMapName\\": \\"string\\",\\n                  \\"dropRate\\": 0,\\n                  \\"numBytes\\": 0,\\n                  \\"numPackets\\": 0,\\n                  \\"offeredRate\\": 0,\\n                  \\"queueBandwidthbps\\": \\"string\\",\\n                  \\"queueDepth\\": 0,\\n                  \\"queueNoBufferDrops\\": 0,\\n                  \\"queueTotalDrops\\": 0,\\n                  \\"refreshedAt\\": 0\\n                }\\n              ],\\n              \\"qosStatsCollection\\": \\"string\\",\\n              \\"qosStatsCollectionFailureReason\\": \\"string\\",\\n              \\"usedVlan\\": \\"string\\",\\n              \\"vrfName\\": \\"string\\"\\n            }\\n          ]\\n        },\\n        \\"ip\\": \\"string\\",\\n        \\"linkInformationSource\\": \\"string\\",\\n        \\"name\\": \\"string\\",\\n        \\"perfMonCollection\\": \\"string\\",\\n        \\"perfMonCollectionFailureReason\\": \\"string\\",\\n        \\"perfMonitorStatistics\\": [\\n          {\\n            \\"byteRate\\": 0,\\n            \\"destIpAddress\\": \\"string\\",\\n            \\"destPort\\": \\"string\\",\\n            \\"inputInterface\\": \\"string\\",\\n            \\"ipv4DSCP\\": \\"string\\",\\n            \\"ipv4TTL\\": 0,\\n            \\"outputInterface\\": \\"string\\",\\n            \\"packetBytes\\": 0,\\n            \\"packetCount\\": 0,\\n            \\"packetLoss\\": 0,\\n            \\"packetLossPercentage\\": 0,\\n            \\"protocol\\": \\"string\\",\\n            \\"refreshedAt\\": 0,\\n            \\"rtpJitterMax\\": 0,\\n            \\"rtpJitterMean\\": 0,\\n            \\"rtpJitterMin\\": 0,\\n            \\"sourceIpAddress\\": \\"string\\",\\n            \\"sourcePort\\": \\"string\\"\\n          }\\n        ],\\n        \\"role\\": \\"string\\",\\n        \\"ssid\\": \\"string\\",\\n        \\"tunnels\\": [\\n          \\"string\\"\\n        ],\\n        \\"type\\": \\"string\\",\\n        \\"wlanId\\": \\"string\\"\\n      }\\n    ],\\n    \\"properties\\": [\\n      \\"string\\"\\n    ],\\n    \\"request\\": {\\n      \\"controlPath\\": true,\\n      \\"createTime\\": 0,\\n      \\"destIP\\": \\"string\\",\\n      \\"destPort\\": \\"string\\",\\n      \\"failureReason\\": \\"string\\",\\n      \\"id\\": \\"string\\",\\n      \\"inclusions\\": [\\n        \\"string\\"\\n      ],\\n      \\"lastUpdateTime\\": 0,\\n      \\"periodicRefresh\\": true,\\n      \\"protocol\\": \\"string\\",\\n      \\"sourceIP\\": \\"string\\",\\n      \\"sourcePort\\": \\"string\\",\\n      \\"status\\": \\"string\\"\\n    }\\n  },\\n  \\"version\\": \\"string\\"\\n}\\n"


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

